--- a/dubbodemo_provider/pom.xml
+++ b/dubbodemo_provider/pom.xml
@@ -97,6 +97,7 @@
     </dependency>
   </dependencies>
   <build>
+<!--    测试git分支合并-->
     <plugins>
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
