--- a/dubbodemo_consumer/pom.xml
+++ b/dubbodemo_consumer/pom.xml
@@ -83,15 +83,7 @@
   </dependencies>
   <build>
     <plugins>
-<!--      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>-->
+<!--      Jin分支修改-->
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
         <artifactId>tomcat7-maven-plugin</artifactId>
