--- a/dubbodemo_consumer/pom.xml
+++ b/dubbodemo_consumer/pom.xml
@@ -83,8 +83,8 @@
   </dependencies>
   <build>
     <plugins>
-<!--      Jin分支修改-->
-<!--      Jin分支修改-->
+<!--      JinX分支修改-->
+<!--      JinX分支修改-->
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
         <artifactId>tomcat7-maven-plugin</artifactId>
